--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,25 @@ logs/
 .idea/
 *.sublime-workspace
 *.sublime-project
+
+
+
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
